--- a/wp-content/themes/wpbootstrap/style.css
+++ b/wp-content/themes/wpbootstrap/style.css
@@ -177,59 +177,60 @@ h6, .h6 {
 }
 
 /*
- * Custom Styles
- *
- */
+*  Custom Styles
+*
+*/
 
- .showcase{
-   height:600px;
-   padding: 100px 20px;
-   text-align: center;
-   border-bottom:#ccc 1px solid;
-   margin-bottom:30px;
-   color:#fff;
- }
+.showcase{
+  height: 600px;
+  padding: 100px 20px;
+  text-align: center;
+  border-bottom: #ccc 1px solid;
+  margin-bottom: 30px;
+  color: #fff;
+  background: #333 url('../img/showcase.jpg') no-repeat center center;
+}
 
- .showcase h1{
-   font-size: 55px;
-   padding-bottom:20px;
-   color:#fff;
- }
+.showcase h1{
+  font-size: 55px;
+  padding-bottom: 20px;
+  color: #fff;
+}
 
- .showcase p {
-   font-size:20px;
-   margin-bottom:50px;
- }
+.showcase p{
+  font-size: 20px;
+  margin-bottom: 50px;
+}
 
- .boxes{
-   text-align: center;
-   background:#fff;
-   margin-bottom: 30px;
- }
+.boxes{
+  text-align: center;
+  background: #fff;
+  margin-bottom: 30px;
+}
 
- .box .fa{
-   font-size:45px !important;
-   margin-bottom:10px;
- }
+.box .fa{
+  font-size: 45px !important;
+  margin-bottom: 10px;
+}
 
- .box{
-   padding:15px;
-   border:#ccc 1px solid;
- }
+.box{
+  padding: 15px;
+  border: #ccc 1px solid;
+}
 
- .blog-nav a{
-   color:#fff;
- }
+.blog-nav a{
+  color: #fff;
+}
 
- .blog-nav a:hover{
-   color:#666;
- }
+.blog-nav a:hover{
+  color: #666;
+}
 
- .post-thumb img{
-   width:100%;
-   height:auto;
-   margin-bottom:8px;
- }
+.post-thumb img{
+  width: 100%;
+  height: auto;
+  margin-bottom: 8px;
+}
 
 .comments{
   border:1px #ccc solid;
@@ -238,55 +239,44 @@ h6, .h6 {
   margin-top:10px;
 }
 
-.comments h3,.comments h2{
-  background:#428bca;
-  color:#fff;
-  padding:5px;
+.comments h3, .comments h2{
+  background: #428bca;
+  color: #fff;
+  padding: 5px;
 }
 
 .comment-body{
-  border:#ccc solid 1px;
-  margin-bottom:10px;
-  padding:20px 10px;
+  border: #ccc solid 1px;
+  margin-bottom: 10px;
+  padding: 20px 10px;
 }
 
 .comment-meta{
-  background:#428bca;
-  color:#fff;
-  padding:10px;
-  overflow:auto;
+  background: #428bca;
+  color: #fff;
+  padding: 10px;
+  overflow: auto;
 }
 
 .comment-meta a{
-  color:#fff;
+  color: #fff;
 }
 
 .comment-meta img{
   float:left;
-  margin-right:10px;
+  margin-right: 10px;
 }
 
 .comment-reply-link{
-  background:#428bca;
-  color:#fff;
+  background: #428bca;
+  color: #fff;
   display: inline-block;
   padding: 10px 15px;
 }
 
 .comment-form input, .comment-form textarea{
   width:100%;
-  padding:4px;
-  border:#ccc solid 1px;
+  padding: 4px;
+  border: #ccc solid 1px;
   margin-bottom:15px;
-}
-
-.post-gallery{
-  background:#333;
-  color:#fff;
-  padding:10px;
-  text-align: center;
-}
-
-.post-gallery h2{
-  color:#fff;
 }
